--- a/cust0/src/css/Login.css
+++ b/cust0/src/css/Login.css
@@ -1,3 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Titillium+Web&display=swap');
+
 .container {
     background-image: url("../assets/loginBackGround.png");
+    background-size: 100% 100%;
+    height: 100vh;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+}
+
+.background_main {
+    background: linear-gradient(0deg, rgba(33, 22, 22, 0.58), rgba(33, 22, 22, 0.58));
+    border-radius: 16px;    
+
+    min-width: 250px;
+    width: 40%;
+    height: 600px;
+}
+
+.container_form {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.login_text {
+    font-family: 'Titillium Web', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 88.49px;
+    line-height: 135px;
+    letter-spacing: 0.09em;
+
+    color: #DEDEDE;
+
+    text-transform: uppercase;
+}
+
+.form_login{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
+    height: 44%;
+}
+
+input {
+    background: #FAF6F6;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+
+    height: 40px;
+    width: 100%;
+    min-width: 200px;
+
+
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    padding-left: 8px;
+    
+    color: #ACACAC;
+}
+
+input:focus{
+    font-size: 15px;
+    color: black;
+}
+
+.email_input{
+    margin-bottom: 30px;
+}
+
+.password_input {
+    
+
+}
+
+.forgot_pass {
+    align-self: flex-start;
+    font-size: 14px;
+    line-height: 23px;
+    text-decoration-line: underline;
+    
+    color: #FFFFFF;
+}
+
+.forgot_pass:hover{
+    cursor: pointer;
+}
+
+.btn_login {  
+    background: #EEF086;
+    border-radius: 5px;
+    width: 150px;
+    height: 45px;   
+
+    margin-top: 40px;
+}
+
+.btn_login:hover{
+    cursor: pointer;
+}
+
+.singup {
+    color: white;
+}
+
+.link_signup {
+    text-decoration-line: underline;
+}
+
+
+@media (max-width: 1000px) {
+    .login_text {
+        font-size: 70px;
+    }
+}
+
+@media (max-width: 680px) {
+    .login_text {
+        font-size: 60px;
+    }
 }
