--- a/cust0/src/css/Login.css
+++ b/cust0/src/css/Login.css
@@ -82,10 +82,6 @@ input:focus{
     margin-bottom: 30px;
 }
 
-.password_input {
-    
-
-}
 
 .forgot_pass {
     align-self: flex-start;
@@ -107,10 +103,15 @@ input:focus{
     height: 45px;   
 
     margin-top: 40px;
+    
 }
 
-.btn_login:hover{
+.pointer{
     cursor: pointer;
+}
+
+.not_allowed:hover {
+    cursor: not-allowed;
 }
 
 .singup {
@@ -119,17 +120,18 @@ input:focus{
 
 .link_signup {
     text-decoration-line: underline;
+    color: white;
+    margin-left: 2px;
 }
 
 
 @media (max-width: 1000px) {
+    .background_main{
+        width: 60%;
+        min-width: 300px;
+    }
+
     .login_text {
         font-size: 70px;
-    }
-}
-
-@media (max-width: 680px) {
-    .login_text {
-        font-size: 60px;
     }
 }
