--- a/cust0/src/css/Home.css
+++ b/cust0/src/css/Home.css
@@ -7,7 +7,7 @@
 }
 
 .container-login {
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
