--- a/cust0/src/css/Produto.css
+++ b/cust0/src/css/Produto.css
@@ -7,11 +7,46 @@
     padding: 120px 0;
 }
 
-.produto-section img {
+.reservar-produto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.reservar-produto img {
     height:  380px;
     width: 450px;
     /* overflow: hidden; */
     object-fit: cover;
+}
+
+.reservar-produto input{
+    width: 50px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 18px;
+    margin: 30px 0 30px 0;
+}
+
+.reservar-produto button {
+    width: 250px;
+    height: 40px;
+    background: #61BB6A;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+
+.reservar-produto button img {
+    height: 25px;
+    width: auto;
+    margin-right: 15px;
 }
 
 .info-produto {
