--- a/cust0/src/css/Home.css
+++ b/cust0/src/css/Home.css
@@ -84,3 +84,10 @@
     height: 25px;
     margin-right: 15px;
 }
+
+@media (max-width: 699px) {
+    .section-login {
+        justify-content: center;
+        padding: 0;
+    }
+}
