--- a/cust0/src/css/Produto.css
+++ b/cust0/src/css/Produto.css
@@ -14,13 +14,13 @@
 }
 
 .reservar-produto img {
-    height:  380px;
+    height: 380px;
     width: 450px;
     /* overflow: hidden; */
     object-fit: cover;
 }
 
-.reservar-produto input{
+.reservar-produto input {
     width: 50px;
     border-radius: 10px;
     text-align: center;
@@ -97,17 +97,25 @@
 }
 
 .fundo-pp {
-    display: flex; /* Hidden by default */
+    display: flex;
+    /* Hidden by default */
     align-items: center;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
 
 .fundo-pp form {
@@ -135,13 +143,16 @@
     margin-bottom: 3px;
 }
 
-.fundo-pp select, input {
+.fundo-pp select, input, textarea {
     width: 30vw;
     height: 30px;
 }
 
 .input-descricao-pp {
+    resize: none;
     height: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 10px;
 }
 
 .fundo-pp button {
@@ -158,4 +169,63 @@
     font-size: 14px;
     text-decoration: none;
     margin: 20px 0 0 0;
+}
+
+@media(max-width: 1480px) {
+    .fundo-pp form {
+        width: 60%;
+        margin-left: 20%;
+    }
+
+    .fundo-pp select, input, textarea {
+        width: 50vw;
+    }    
+}
+
+@media(max-width: 1100px) {
+    .produto-section {
+        flex-direction: column-reverse;
+    }
+
+    .reservar-produto img {
+        height: 50vw;
+        width: 75vw;
+    }
+
+    .info-produto {
+        margin: 0;
+        width: 75vw;
+    }
+
+    .info-produto hr {
+        width: 100%;
+    }
+
+    .produto-descricao {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .produto-preco {
+        font-size: 28px;
+        margin: 20px 0;
+    }
+
+    .produto-titulo {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    .reservar-produto button {
+        width: 200px;
+    }
+
+    .produto-descricao-t {
+        font-size: 21px;
+        margin: 20px 0 10px 0;
+    }
+
+    .produto-descricao {
+        font-size: 16px;
+    }
 }
