--- a/cust0/src/css/Produto.css
+++ b/cust0/src/css/Produto.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 120px 0;
+    padding: 7% 0;
 }
 
 .reservar-produto {
