--- a/cust0/src/css/Produto.css
+++ b/cust0/src/css/Produto.css
@@ -41,6 +41,10 @@
     font-size: 18px;
     text-decoration: none;
 }
+#doa {
+    background: orange;
+    margin-top: 20px;
+}
 
 
 .reservar-produto button img {
@@ -119,7 +123,6 @@
     flex-direction: column;
     align-items: center;
     padding: 30px;
-    margin: 10px;
 }
 
 .fundo-pp h2 {
